@@ -1,5 +1,11 @@
 Moodle Direct Release Notes
 ------------------------------------------------------------------------------------
+Date:       2014-Nov-12
+Release:    v2014103102
+
+- Fixed PHP 5.6 CURL file upload
+
+####################################################################################
 Date:       2014-Oct-31
 Release:    v2014103101
 
